--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@ const styles = StyleSheet.create({
 					<ol>
 						<li class="fragment">Make sure you have Node installed</li>
 						<li class="fragment">Make sure you have Watchman as well: <code>brew install watchman</code></li>
-						<li class="fragment">Install the React Native CLI <code>npm install -g react-native-cli</code> </li>
 						<li class="fragment">Xcode: The easiest way to install Xcode is via the Mac App Store.</li>
-						<li class="fragment">Open Xcode, then choose "Preferences..." from the Xcode menu. Go to the Locations panel and install the dev tools by selecting the most recent version in the Command Line Tools dropdown.</li>
+						<li class="fragment">Command Line Tools: Open Xcode, then choose "Preferences..." from the Xcode menu. Go to the Locations panel and install the tools by selecting the most recent version in the Command Line Tools dropdown.</li>
+						<li class="fragment">Install CocoaPods: <code>sudo gem install cocoapods</code> </li>
 					</ol>
 				</section>
 
@@ -203,7 +203,7 @@ const styles = StyleSheet.create({
 					<h2>Creating a new application</h2>
 					<p>Change directories into the folder you want and enter the following command:</p>
 					<br>
-<pre><code>react-native init name-of-project</code></pre>				
+<pre><code>npx react-native init name-of-project</code></pre>				
 				</section>
 
 				<section>
@@ -214,7 +214,7 @@ const styles = StyleSheet.create({
 				<section>
 					<h2>Launch the app</h2>
 <pre><code>cd AwesomeProject
-react-native run-ios
+npx react-native run-ios
 </code></pre>
 					<p>Let's explore the file system</p>
 				</section>
@@ -255,8 +255,9 @@ react-native run-ios
 				</section>
 
 				<section>
-					<h2>Xcode 9</h2>
-					<p>Updates <a href="https://hackernoon.com/introduction-to-xcode-9-94205e83a985">here</a></p>
+					<h2>Xcode 12</h2>
+					<p>Understand the Xcode basics <a href="https://hackernoon.com/introduction-to-xcode-9-94205e83a985">here</a></p>
+					<p>Xcode 12 updates <a href="https://medium.com/mindful-engineering/getting-started-with-xcode12-ae22688fc7ff">here</a></p>
 				</section>
 
 				<section>
